--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "echarts": "^4.5.0",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.7.2",
     "jquery": "^3.4.1",
     "screenfull": "^5.0.0",
     "vue": "^2.6.10",
+    "vue-count-to": "^1.0.13",
     "vue-native-websocket": "^2.0.13",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
