--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "echarts": "^4.5.0",
+    "el-table-pagination": "^0.4.38",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.7.2",
     "jquery": "^3.4.1",
