--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "echarts": "^4.5.0",
     "el-table-pagination": "^0.4.38",
     "element-china-area-data": "^4.1.2",
-    "element-ui": "^2.7.2",
+    "element-ui": "^2.13.0",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "screenfull": "^5.0.0",
+    "v-distpicker": "^1.2.2",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-count-to": "^1.0.13",
     "vue-native-websocket": "^2.0.13",
     "vue-router": "^3.1.3",
